--- a/src/main/resources/com/vertex/vos/loginForm.fxml
+++ b/src/main/resources/com/vertex/vos/loginForm.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -59,19 +59,18 @@
                         <CheckBox fx:id="rememberMe" mnemonicParsing="false" styleClass="selected" text="Remember me" />
                         <VBox spacing="5.0">
                             <children>
-                                <Button fx:id="signInButton" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#handleSignInButtonAction" prefWidth="294.0" style="-fx-font-weight: 400; -fx-border-color: #155d99;" text="Sign In">
-                                    <styleClass>
-                                        <String fx:value="text button" />
-                                        <String fx:value="text-label" />
-                                    </styleClass>
-                                </Button>
-                                <Label style="-fx-font-style: italic; -fx-cursor: pointer;" styleClass="text-label" text="Forgot Password?" />
+                        <ButtonBar>
+                          <buttons>
+                            <Button fx:id="signInButton" defaultButton="true" mnemonicParsing="false" onAction="#handleSignInButtonAction" text="Sign In" />
+                          </buttons>
+                        </ButtonBar>
+                                <Label style="-fx-font-style: italic; -fx-cursor: pointer;" styleClass="text-label" text="Forgot Password?" visible="false" />
                             </children>
                         </VBox>
                         <Label fx:id="loginFailed" style="-fx-text-fill: #FF0000; -fx-font-weight: 700;" text="Sign in failed" visible="false" />
                   <HBox alignment="CENTER_LEFT" style="-fx-spacing: 10;">
                      <children>
-                        <ComboBox fx:id="environment" prefHeight="25.0" prefWidth="234.0" />
+                        <ComboBox fx:id="environment" promptText="Select Environment" />
                      </children>
                   </HBox>
                     </children>
