--- a/src/main/resources/com/vertex/vos/SalesInvoice.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoice.fxml
@@ -8,11 +8,16 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefWidth="800.0" style="-fx-background-radius: 20px 0px 0px 0px; -fx-background-color: #f0f0f0;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceController">
@@ -145,7 +150,7 @@
                                         </VBox>
                                     </children>
                                 </HBox>
-                        <VBox fx:id="addBoxes">
+                        <HBox fx:id="addBoxes" spacing="25.0">
                            <children>
                               <HBox fx:id="addDebitMemo" alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
@@ -165,7 +170,7 @@
                                     </VBox>
                                  </children>
                               </HBox>
-                              <HBox fx:id="addCreditMemo" alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" spacing="10.0">
+                              <HBox fx:id="addCreditMemo" alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
                                     <VBox>
                                        <children>
@@ -176,7 +181,25 @@
                                                       <Image url="@assets/icons/Add.png" />
                                                    </image>
                                                 </ImageView>
-                                                <Label fx:id="addProductLabel1" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Add Credit Memo" />
+                                                <Label style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Add Credit Memo" />
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                              <HBox fx:id="addSalesReturn" alignment="CENTER_LEFT" spacing="10.0">
+                                 <children>
+                                    <VBox>
+                                       <children>
+                                          <HBox alignment="CENTER_LEFT">
+                                             <children>
+                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@assets/icons/Add.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Label style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Add Sales Return Document" />
                                              </children>
                                           </HBox>
                                        </children>
@@ -184,7 +207,7 @@
                                  </children>
                               </HBox>
                            </children>
-                        </VBox>
+                        </HBox>
                             </children>
                             <padding>
                                 <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
@@ -194,20 +217,69 @@
                                 <URL value="@assets/global.css" />
                             </stylesheets>
                         </VBox>
-                  <TabPane fx:id="salesOrderTab" minHeight="400.0" stylesheets="@assets/table.css" tabClosingPolicy="UNAVAILABLE" />
+                  <TabPane>
+                     <tabs>
+                        <Tab fx:id="salesOrderProducts" closable="false" text="Product Items">
+                           <content>
+                              <TabPane fx:id="salesOrderTab" minHeight="400.0" stylesheets="@assets/table.css" tabClosingPolicy="UNAVAILABLE" />
+                           </content>
+                        </Tab>
+                        <Tab fx:id="adjustmentTab" closable="false" text="Adjustment">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <TableView fx:id="adjustmentTable" layoutX="130.0" layoutY="32.0" prefHeight="200.0" prefWidth="200.0" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                 </children></AnchorPane>
+                          </content>
+                        </Tab>
+                        <Tab fx:id="salesReturns" closable="false" text="Sales Returns">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <TableView fx:id="salesReturnTable" prefHeight="200.0" prefWidth="200.0" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                 </children></AnchorPane>
+                          </content>
+                        </Tab>
+                     </tabs>
+                  </TabPane>
                         <VBox fx:id="totalVBox" spacing="10.0">
                             <children>
                                 <HBox fx:id="totalBox" alignment="CENTER_RIGHT" spacing="20.0">
                                     <children>
-                                        <VBox fx:id="totalBoxLabels" alignment="CENTER_RIGHT" spacing="5.0">
-                                            <children>
-                                                <Label fx:id="gross" layoutX="13.0" layoutY="10.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" />
-                                                <Label fx:id="discounted" layoutX="13.0" layoutY="10.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" />
-                                                <Label fx:id="withholding" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" />
-                                                <Label fx:id="vat" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" />
-                                                <Label fx:id="grandTotal" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" />
-                                            </children>
-                                        </VBox>
+                              <GridPane prefHeight="150.0" prefWidth="271.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                                <Label fx:id="gross" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" GridPane.columnIndex="1" />
+                                                <Label fx:id="discounted" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <Label fx:id="withholding" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                                <Label fx:id="vat" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                                <Label fx:id="grandTotal" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                    <Label text="Gross" />
+                                    <Label text="Discount" GridPane.rowIndex="1" />
+                                    <Label text="Withholding" GridPane.rowIndex="2" />
+                                    <Label text="VAT" GridPane.rowIndex="3" />
+                                    <Label text="Grand Total" GridPane.rowIndex="4" />
+                                 </children>
+                              </GridPane>
+                                        <VBox fx:id="totalBoxLabels" alignment="CENTER_RIGHT" spacing="5.0" />
                                     </children>
                                     <VBox.margin>
                                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
