--- a/src/main/resources/com/vertex/vos/Vehicle.fxml
+++ b/src/main/resources/com/vertex/vos/Vehicle.fxml
@@ -41,7 +41,7 @@
                   </VBox>
                   <VBox layoutX="940.0" layoutY="10.0">
                      <children>
-                        <Label layoutX="10.0" layoutY="49.0" text="Max Load (KG)" />
+                        <Label layoutX="10.0" layoutY="49.0" text="Minimum Load" />
                         <TextField fx:id="maxLoad" />
                         <Label text="Label" visible="false" />
                      </children>
