--- a/src/main/resources/com/vertex/vos/ProductSelectionBySupplier.fxml
+++ b/src/main/resources/com/vertex/vos/ProductSelectionBySupplier.fxml
@@ -28,7 +28,7 @@
             </HBox>
             <VBox>
                <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
+                  <HBox fx:id="selectionBox" prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <VBox fx:id="supplierBox">
                            <children>
@@ -88,7 +88,7 @@
                   </VBox>
                </children>
             </VBox>
-            <TableView fx:id="productsPerSupplier" stylesheets="@assets/table.css">
+            <TableView fx:id="productTableView" stylesheets="@assets/table.css">
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
